--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.profiles.active=default
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username= taskapp
+spring.datasource.url= jdbc:postgresql://localhost:5432/taskapp
+spring.datasource.password=12345
+spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create
