Correcciones para test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.profiles.active=default
+#spring.profiles.active=default
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username= taskapp
+spring.datasource.username= postgres
 spring.datasource.url= jdbc:postgresql://localhost:5432/taskapp
-spring.datasource.password=12345
+spring.datasource.password=root
 spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
