Cambios para heroku
Cambios en backend para implementar heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,13 @@
+spring.profiles.active=heroku
+
+#Banner
+spring.banner.location=banner.txt
+
 # Webservice
-vs= jdbc:postgresql://localhost:5432/postgres
-url.user.signup= /${vs}/users/login
+vs= v1
+url.login= /${vs}/users/login
 url.priorities=${vs}/priorities
 url.tasks=${vs}/tasks
 url.unsecure=${vs}/unsecure
-url.login= /${vs}/login
-
-# validate: validate the schema, makes no changes to the database.
-# update: update the schema.
-# create: creates the schema, destroying previous data.
-# create-drop: drop the schema at the end of the session.
-spring.jpa.hibernate.ddl-auto = create
-
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.username = postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.password = root
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql = true
+url.user=${vs}/users
+url.user.signup= /${url.user}/signup
