Arreglo adelanto de cambios de deployment
Se modifica el application.properties para hacer que los tests funcionen aunque la configuracion de heroku ya este

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
-spring.profiles.active=heroku
+#PARA DEPLOYMENT SE DESCOMENTA ESTO
+#spring.profiles.active=heroku
 
 #Banner
 spring.banner.location=banner.txt
 
 # Webservice
-vs= v1
+vs= jdbc:postgresql://localhost:5432/postgres
 url.login= /${vs}/users/login
 url.priorities=${vs}/priorities
 url.tasks=${vs}/tasks
 url.unsecure=${vs}/unsecure
 url.user=${vs}/users
 url.user.signup= /${url.user}/signup
+
+# PARA DEPLOYMENT SE QUITA ESTO
+spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.username = postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.password = root
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
