Cambios para postman
Se agrego Webservice.kt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@
 spring.banner.location=banner.txt
 
 # Webservice
-vs= jdbc:postgresql://localhost:5432/postgres
+vs= v1
+#vs= jdbc:postgresql://localhost:5432/postgres
 url.login= /${vs}/users/login
 url.priorities=${vs}/priorities
 url.tasks=${vs}/tasks
+url.classes=${vs}/classes
 url.unsecure=${vs}/unsecure
 url.user=${vs}/users
 url.user.signup= /${url.user}/signup
