Postman Funcionando Gets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ url.login= /${vs}/users/login
 url.priorities=${vs}/priorities
 url.tasks=${vs}/tasks
 url.classes=${vs}/classes
+url.requests=${vs}/requests
 url.unsecure=${vs}/unsecure
 url.user=${vs}/users
 url.user.signup= /${url.user}/signup
