--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #PARA DEPLOYMENT SE DESCOMENTA ESTO
-#spring.profiles.active=heroku
+spring.profiles.active=heroku
 
 #Banner
 spring.banner.location=banner.txt
@@ -16,11 +16,10 @@ url.user=${vs}/users
 url.user.signup= /${url.user}/signup
 
 # PARA DEPLOYMENT SE QUITA ESTO
-spring.jpa.hibernate.ddl-auto = update
-
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.username = postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.password = root
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.driver-class-name = org.postgresql.Driver
+#spring.datasource.username = postgres
+#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.password = root
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql = true
